style.css
*{
    background-color: white;
    color: black;
    font-size: 15pt;
    font-weight: bold;
    font-family: sans-serif;
}
h1 {
    display: inline;
    font-size: 35pt;
    z-index: 1;

    
}
#topbar {
    height: 75px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #818384;

    
}
#social {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-direction: row;
    width: 20%;
    font-size: 15px;
    
}
#social img {
    width: 40px;

}
#social button {
    border: none;
}
#slideInContainter button {
    z-index: 10;
    position: relative;
    left: 10px;
    border: none;
    
}
#slideInContainter img {
    height: 40px;
}

#slideInContainter {
    width: 20%;
    height: 75px;
    display: flex;
    justify-content: flex-start;
}


#social > * {
    margin: 10px;
}

#board {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(6, 1fr);
    gap: 7px;
    width: 356px;
    

}

#board > *{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 30px;
    font-weight: bold;
    font-family: sans-serif;
    border: 2px solid #d4d6da;
    height: 60px;
    
}

.center {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    flex-direction: row;
    height: 520px;
}
#keyboard {
    margin-top: 30px;
}
#keyboard > *{
    height: 60px
}
.row {
    display: flex;
    justify-content: center;
    margin: 8px;
}
#keyboard .button {
    width: 45px;
    height: 60px;
    margin: 3px;
    border-radius: 10%;
    border: none;
    background-color: #d4d6da;
    font-weight: bolder;

}
#keyboard .sbutton {
    height: 60px;
    margin: 3px;
    border-radius: 10%;
    border: none;
    background-color: #d4d6da; 
    font-size: 10pt;
    font-weight: bolder;

}
.wide {
    width: 65px;
    font-size: 10pt;
}
.sbutton img {
    width: 100%
}
.overlay {
    z-index: 10;
    position: fixed;
    width: 500px;
    height: 500px;
    background-color: white;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 1%;
    text-align: center;
    font-size: 30px;
    font-weight: bold;
    font-family: sans-serif;
    visibility: hidden;

}

#gameOverScreen p {
    background-color: white;
    
}
#gameOverScreen button {
    border: none;
    background-color: white;
    font-size: 20px;
    font-family: sans-serif;
    position: absolute;
    right: 20px;
    top: 15px;
    
}
#darken {
    position: fixed;
    z-index: 5;
    top: 0%;
    width: 100%;
    height: 100%;
    background-color: white;
    opacity: 50%;
}
#replay {
    
    margin-right: 440px;
    position: absolute;
    border: none;
    background-color: #d4d6da;
    width: 40px;
    height: 40px;
    border-radius: 5%;

}
#replay img {
    width: 100%;
    background: none;
    object-fit:contain;
}
#slideInMenu ul{
    list-style: none;
    padding: 0px;
}
#slideInMenu h3 {
    margin-left: 30px;
    font-size: 20pt;
    font-family: sans-serif;
    font-weight: bold;
}

#slideInMenu h4 {
    margin-left: 30px;
    font-size: 10pt;
    font-family: sans-serif;
    font-weight: bold;
    
}


#slideInMenu li {
    font-size: 15pt;
    font-family: sans-serif;
    font-weight: lighter;
    height: 40px;
    
    font-size: 15px;
}
#slideInMenu a {
    text-decoration: none;
}
hr {
    border: none;
    height: 1px;
    background-color:#d4d6da;
}
#slideInMenu div:hover {
    background-color: #818384;
    transition: 0.2s;
}
#slideInMenu div {
    height: 40px;
    display: flex;
    align-items: center;
    width: 100%;
}
#slideInMenu p{
    background:none;
}
#slideInMenu img {
    margin-left: 30px;
    margin-right: 20px;
    width: 20px;
    height: 20px;
    border-radius: 20%;

}

.menu {
    position: absolute;
    width: 400px;
    height: 400px;
    z-index: 10;
    right: 0px;

    background-color: white;
    position: absolute;
    border-left: 0.5px solid d4d6da;
    border-bottom: 0.5px solid d4d6da;
    box-shadow:  -5px 5px 5px rgba(0,0,0,.15);
    z-index: 20;

}
#timerEntry {
    color: black
}
.menu button {
    border: 1px solid #d4d6da;
    width: 20px;
    height: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: black;
}
.menu h4 {
    font-size: 20pt;
    text-align: center;
    height: 20pt;
    position: relative;
    left: 100px;
    width: 50%;
    margin-bottom: 30px;
}



.name {
    width: 5rem;
    text-align: center;
}
.time {
    width: 3rem;
    text-align: center;
}
.entry {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 30px;
}
.entry > * {
    display: inline-block;
    font-size: 13pt;
    margin-right: 30px;
    color: #88898c;
}
.setting {
    width: 150px;
    color: black;
}
#nameEntry {
    display: flex;
    justify-content: center;
    
}
#nameEntry > * {
    width: 30px;
    height: 30px;
    height: 30px;
    margin-left: 5px;
    border: 2px solid #d4d6da;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    font-weight: bold;
    font-family: sans-serif;

}
.comingSoon {
    margin-left: 30px;
}
#slideInMenu {
    background-color: white;
    position: absolute;
    width: 300px;
    height: 100vh;
    border-right: 0.5px solid #d4d6da;
    box-shadow: 5px 5px 5px rgba(0,0,0,.15);
    z-index: 20;
}

#miniboard {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(6, 1fr);
    gap: 5px;
    width: 170px;
    left: 75px;
    
}

#miniboard > div{
    background-color: #d4d6da;
    height: 30px;
    
}

.numbered {
    height: 205px;
}
.numbered > * {
    font-size: 15px;
    display: flex;
    margin-top: 0px;
    margin-bottom: 5px;
    align-items: center;
    height: 30px
}
.gameRecap {
    display: flex;
    justify-content: center;
    width: 80%;
    margin-left: 10%;
}
.gameRecap > *{
    margin: 10px;
    background-color: none;
}
#gameOverScreen hr{
    width: 80%
}
#gameOverScreen h6{
    margin:20px;
}

#timer {
    margin-left: 440px;
    position: absolute;
    height: 417px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

#timer > * {
    width: 4rem;
    text-align: center;
    color: #88898c;
}

#miniTimer > * {
    color: #88898c;
    
}

h5 {
    margin: 0px;
    font-size: 15pt;
    color: #d4d6da;
    font-family: sans-serif;

}

@media screen and (max-width: 600px){
    #gameOverScreen {
        width: 80%
    }
    h1 {
        font-size: 25pt;
    }
    .menu {

        width: 300px;
        height: 350px;
    }

    .menu h4 {
        left: 65px;
    }
    .entry {
        margin-left: 10px;
    }
    .entry > * {
       
        margin-right: 10px;
        font-size: 15px;
        
    }
    
}

